Add tab completion for the reload command